<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="operation_plus">+</string>
    <string name="operation_minus">-</string>
    <string name="operation_mult">*</string>
    <string name="operation_div">/</string>
    <string name="equals">=</string>
    <string name="reset">C</string>
    <string name="result">0</string>
</resources>
