<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-81dp">

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calcResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical|end"
                android:text="@string/result"
                android:textAlignment="viewEnd"
                android:textSize="36sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNumber1"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber2"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber3"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/operation_plus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNumber4"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber5"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber6"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMinus"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/operation_minus"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNumber7"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber8"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber9"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/operation_mult"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forthLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonReset"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNumber0"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonEquals"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals"
                android:textSize="34sp" />

            <Button
                android:id="@+id/buttonDivide"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/operation_div"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>